# Internal_stresses

./: README.md
Cpp/: README
Cpp/DLA/: README
Cpp/DLA/src/: CMakeLists.txt  funcs.cc  main_driver.cc
Cpp/StokesFlow/: README  funcs.cc  funcs.h  main_driver.cc
Cpp/StokesFlow/src/: CMakeLists.txt  funcs.cc  funcs.h  main_driver.cc
Cpp/src/: main_driver.cc  randomwalk.h
MATLAB/: CompareResolution.m  ComputeInternalStresses.m  ComputeStressesAndSolidBodyMotion.m  DLA_3D.m  DoubleLayer_DL.m  FindTwoAggregates.m  README  build_bell.m  build_dumb.m  build_faces.m  fractal_bi_stokes_force.m  fractal_bi_stokes_force_rot.m  fractal_bi_stokes_force_strain.m  fractal_bi_stokes_force_trans_and_rot.m  refine_aggregate.m  rotation.m  single_layer.m
Python/: README
